--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
@@ -20,15 +21,13 @@
 </head>
 
 <body>
-    <div id="show-number">
-    </div>
-    <main>
+    <br>
+    <br>
+    <br>
+    <main class="container jumbotron bg-dark">
 
     </main>
     <script>
-
-
-
 
         $(document).ready(function () {
             var correctscore = 0;
@@ -39,19 +38,12 @@
             var currentanswers = [];
             var correctanswer = "";
             var intervalId;
-            var number = 4;
-
-
-
-            //stage initial questions by setting set of questions and by setting anwersers 
-
-            //start the initial timer with the first question chosen randomly
-
-            //determine number of questions nad set the game field with how many questions thereare
+            var number = 30;
 
             function clearScreen() {
                 $("main").empty();
             }
+
             function getNewQuestion() {
                 $.get("https://opentdb.com/api.php?amount=1&category=12&difficulty=medium&type=multiple", function (data, status) {
                     for (var i = 0; i < data.results[0].incorrect_answers.length; i++) {
@@ -61,19 +53,22 @@
                     correctanswer = data.results[0].correct_answer;
                     currentanswers.push(data.results[0].correct_answer)
                     currentanswers.sort(function () { return 0.5 - Math.random() });
-                    $("main").append("<div class='jumbotron text-center'><h1 cla='display-4'>" + currentquestion + "</h1></div>")
+                    console.log(currentanswers);
+                    console.log(currentquestion);
+                    
+                    $("main").append("<div class='row justify-content-center'><div class='card bg-dark text-white border-0'><div class='card-body'><h1>Time Remaining</h1><h1 id='timeleft' class='text-center'>30</h1></div></div></div><br><div class='row justify-content-center'><div class='card bg-dark text-white border-0'><h1 id='questiontext' class='card-body'>" + currentquestion + "</h1></div></div>")
                     for (let i = 0; i < currentanswers.length; i++) {
-                        $("main").append("<div class='ansbutton jumbotron text-center'><button id='" + currentanswers[i] + "' type='button' class='ansbutton btn btn-lg btn-block btn-primary'>" + currentanswers[i] + "</button></div>")
+                        $("main").append("<div class='row justify-content-center'><div class='card bg-dark text-white border-0'><div class='card-body'><button id='" + currentanswers[i] + "' type='button' class='ansbutton btn btn-lg btn-block btn-primary font-weight-bold bg-info'><h3>" + currentanswers[i] +"</h3></button></div></div></div>")
                     }
                     $(".ansbutton").click(function () {
                         stop();
                         clearScreen();
-                        $("main").append("<div class='jumbotron text-center'><h1 cla='display-4'>" + currentquestion + "</h1></div>")
+                        $("main").append("<div class='row justify-content-center'><div class='card bg-dark text-white border-0'><div class='card-body'><h1>Time Remaining</h1><h1 id='timeleft' class='text-center'>30</h1></div></div></div><br><div class='row justify-content-center'><div class='card bg-dark text-white border-0'><h1 id='questiontext' class='card-body'>" + currentquestion + "</h1></div></div>")
                         buttonpressed = $(this).attr("id")
 
                         if (buttonpressed === correctanswer) {
                             correctscore++
-                            $("main").append("<div class='jumbotron text-center'><h1 cla='display-4'>You are Correct!, The Correct Answer Was: " + correctanswer + "</h1></div>")
+                            $("main").append("<div class='row justify-content-center'><div class='card bg-dark text-white border-0'><div class='card-body'><h1 class='display-4'>You are Correct! <br> The Correct Answer Was: " + correctanswer + "</h1></div></div></div>")
                             playnumber++
                             windowTimeout = setTimeout(function () {
                                 runGame()
@@ -82,7 +77,7 @@
                         }
                         else {
                             incorrectscore++
-                            $("main").append("<div class='jumbotron text-center'><h1 cla='display-4'>You are Incorrect!, The Correct Answer Was: " + correctanswer + "</h1></div>")
+                            $("main").append("<div class='row justify-content-center'><div class='card bg-dark text-white border-0'><div class='card-body'><h1 class='display-4'>You are Incorrect! <br> The Correct Answer Was: " + correctanswer + "</h1></div></div></div>")
                             playnumber++
                             var windowTimeout = setTimeout(function () {
                                 runGame()
@@ -95,95 +90,81 @@
                 });
 
             }
+
             function getGameStart() {
                 clearScreen();
-                $("main").append("<div class='jumbotron text-center'><h1 cla='display-4'>welcome to the Trivia Game.  Click start to begin</h1></div>")
-                $("main").append("<div class='jumbotron text-center'><button id='startgamebutton' type='button' class='btn btn-lg btn-block btn-primary'>Start!</button></div>")
+                $("main").append("<div class='row justify-content-center'><div class='card bg-dark text-white border-0'><div class='card-body'><h1 class='display-4'>Welcome to the Trivia Game!</h1></div></div></div>")
+                $("main").append("<div class='row justify-content-center'><div class='card bg-dark text-white border-0'><div class='card-body'><button id='startgamebutton' type='button' class='btn btn-lg btn-block btn-primary font-weight-bold bg-info'><h3>Click Here to Start!</h3></button></div></div></div>")
             }
+
             function run() {
                 intervalId = setInterval(decrement, 1000);
             }
+
             function stop() {
 
                 clearInterval(intervalId);
 
             }
+
             function decrement() {
 
                 number--;
 
-                $("#show-number").html("<h2>" + number + "</h2>");
+                $("#timeleft").html("<h1 id='timeleft' class='text-center'>" + number + "</h1>");
 
                 if (number === 0) {
 
                     stop();
                     clearScreen();
-                    $("main").append("<div class='jumbotron text-center'><h1 cla='display-4'>" + currentquestion + "</h1></div>")
-                    $("main").append("<div class='jumbotron text-center'><h1 cla='display-4'>Times Up!, The Correct Answer Was: " + correctanswer + "</h1></div>")
+                    $("main").append("<div class='row justify-content-center'><div class='card bg-dark text-white border-0'><div class='card-body'><h1>Time Remaining</h1><h1 class='text-center'>30</h1></div></div></div><br><div class='row justify-content-center'><div class='card bg-dark text-white border-0'><h1 id='questiontext' class='card-body'>" + currentquestion + "</h1></div></div>")
+                    $("main").append("<div class='row justify-content-center'><div class='card bg-dark text-white border-0'><div class='card-body'><h1 class='display-4'>Times Up! <br> The Correct Answer Was: " + correctanswer + "</h1></div></div></div>")
+                    //$("main").append("<div class='jumbotron text-center'><h1 cla='display-4'>Times Up! The Correct Answer Was: " + correctanswer + "</h1></div>")
                     unanswered++
                     playnumber++
                     var windowTimeout = setTimeout(function () {
                         runGame();
                     }, 3000);
-                    
+
                 }
             }
+
             function runGame() {
-                if (playnumber === 2) {
+                if (playnumber === 10) {
                     clearScreen();
-                    $("main").append("<div class='jumbotron text-center'><h1 cla='display-4'>Game Over!</h1></div>")
-                    $("main").append("<div class='jumbotron text-center'><h1 cla='display-4'>Number of correct answers: " + correctscore + "</h1></div>")
-                    $("main").append("<div class='jumbotron text-center'><h1 cla='display-4'>Number of incorrect answers: " + incorrectscore + "</h1></div>")
-                    $("main").append("<div class='jumbotron text-center'><h1 cla='display-4'>Number of unanswered: " + unanswered + "</h1></div>")
-                    $("main").append("<div class='jumbotron text-center'><button id='restartbutton' type='button' class='btn btn-lg btn-block btn-primary'>Play Again?</button></div>")
+                    $("main").append("<div class='row justify-content-center'><div class='card bg-dark text-white border-0'><div class='card-body'><h1 class='display-4'>Game Over!</h1></div></div></div>")
+                    $("main").append("<div class='row justify-content-center'><div class='card bg-dark text-white border-0'><div class='card-body'><h1 class='display-4'>Number of correct answers: " + correctscore + "</h1></div></div></div>")
+                    $("main").append("<div class='row justify-content-center'><div class='card bg-dark text-white border-0'><div class='card-body'><h1 class='display-4'>Number of incorrect answers: " + incorrectscore + "</h1></div></div></div>")
+                    $("main").append("<div class='row justify-content-center'><div class='card bg-dark text-white border-0'><div class='card-body'><h1 class='display-4'>Number of unanswered: " + unanswered + "</h1></div></div></div>")
+                    $("main").append("<div class='row justify-content-center'><div class='card bg-dark text-white border-0'><div class='card-body'><button id='restartbutton' type='button' class='btn btn-lg btn-block btn-primary font-weight-bold bg-info'><h3>Play Again?</h3></button></div></div></div>")
                     $(document).on('click', '#restartbutton', function () {
                         playnumber = 0;
                         correctscore = 0;
                         incorrectscore = 0;
                         unanswered = 0;
-                        getGameStart() ;
+                        getGameStart();
                     });
 
                 }
                 else {
-                number = 4;
-                currentquestion = "";
-                currentanswers = [];
-                correctanswer = "";
-                clearScreen();
-                getNewQuestion();
-                run();
+                    number = 30;
+                    currentquestion = "";
+                    currentanswers = [];
+                    correctanswer = "";
+                    clearScreen();
+                    getNewQuestion();
+                    run();
 
                 }
 
             }
+
             getGameStart();
 
             $(document).on('click', '#startgamebutton', function () {
                 runGame()
 
             });
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
         })
     </script>
